# serializing_newtype_enums

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs  newtype_variant_enum.rs
